# OpenWorldLib

./: .gitattributes  README_zh.md  pyproject.toml  requirements.txt  run.sh
data/benchmarks/generation/worldscore/: README.md
data/benchmarks/reasoning/seephyx/: README.md
data/benchmarks/representation/videoverse/: README.md
data/test_vla/: pi0_5_norm_stats.json
docs/: awesome_world_represents_model.md  installation.md  requirement_audio_generation.txt  requirement_wonderworld.txt
examples/: pipeline_infer_mapping.py  pipeline_load_mapping.py  pipeline_mapping.py  run_benchmark.py
examples/evaluation_tasks/: text2video_generation.py
scripts/setup/: default_install.sh  flash_world_install.sh  hunyuan_mirror_install.sh  lingbot_va.sh  omnivinci_install.sh
scripts/test_benchmark/: navigation_video_eval.sh
scripts/test_inference/: test_hunyuan_gamecraft.sh  test_lingbot_world.sh  test_matrix_game_2.sh
src/openworldlib/operators/: hunyuan_worldplay_operator.py
src/openworldlib/pipelines/mmaudio/: pipeline_mmaudio.py
test/: test_astra.py  test_depth_anything.py  test_emu3p5.py  test_flash_world.py  test_giga_brain_0.py  test_hunyuan_gamecraft.py  test_hunyuan_mirror.py  test_hunyuan_worldplay.py  test_lingbot_va.py  test_mmaudio.py  test_pi0.py  test_pi3.py  test_qwen2p5_omni.py  test_recammaster.py  test_spatial_ladder.py  test_spatial_reasoner.py  test_thinksound.py  test_wan2p2.py  test_wan_2p2.py  test_wonder_world.py  test_wow.py
test_stream/: test_vggt_stream.py  test_wan2p2_stream.py
(+9 files in other folders)
