[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openworldlib"
version = "0.1.0"
description = ""
dynamic = ["dependencies"]

[project.optional-dependencies]
transformers_low = [
    "transformers>=4.39.3,<=4.45.1",
    "tokenizers>=0.15.2,<0.20.0",
    "peft>=0.13.2,<0.14.0",
    "diffusers==0.31.0",
]

transformers_high = [
    "transformers>=4.49.0,<=4.57.3",
    "tokenizers>=0.20.3",
    "peft>=0.17.0",
    "diffusers==0.36.0",
]

3d_ply_default = [
    "transformers>=4.49.0,<=4.57.3",
    "tokenizers>=0.20.3",
    "peft>=0.17.0",
    "diffusers==0.36.0",
    "plyfile",
]

audio_default = [
    "transformers>=4.49.0,<=4.57.3",
    "tokenizers>=0.20.3",
    "peft>=0.17.0",
    "diffusers==0.36.0",
    "qwen_omni_utils",
    "soundfile",
]

audio_generation_default = [
    # From docs/requirement_audio_gen.txt
    "lightning",
    "prefigure",
    "k_diffusion",
    "descript-audio-codec @ git+https://github.com/descriptinc/descript-audio-codec.git",
    "alias_free_torch",
    "vector_quantize_pytorch",
    "einops==0.8.1",
    "google",
    "protobuf==3.20.3",
    "tiktoken",
    "colorlog",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
